<resources>
    <string name="app_name">EduTAB Firewall</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="device_admin_password">123</string>
    <string name="button_txt_enable_kiosk">Enable Kiosk Mode</string>
    <string name="button_txt_disable_kiosk">Disable Kiosk Mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">To get you started, there are few steps to complete, this will only take a movement, then you can start using your EduTAB</string>
    <string name="get_start">This device comes pre-loaded with <b>Fully Licensed</b> applications that does not require any additional purchase to use their full functionalities. All the applications were designed to work <b>OFFLINE</b> and does not require an internet connection to function.\n\nWhile this device does not require an internet connection to function, it does support WiFi &amp; GSM Data connectivity (Globally Unlocked) and will attempt to communicate with EduTAB for software updates, policy violation reporting and other diagnostics while connected to the internet.\n\nAll applications pre-installed on this device contains a unique identifier to match your device serial number that will actively query for piracy or illegal modification.\n\nBefore you can use this device, you must accept the <b>End User License Agreement (EULA)</b> that binds you to all responsibilities and legal ties associated with the use of this device.</string>
    <string name="end_user">Please read carefully before agreeing to the terms in this contract, you <b>MUST</b> accept the terms before you can use this device, if you do not wish to accept the terms, please power off and return this device to the location of purchase.</string>
    <string name="eula_content"></string>
    <string name="agreement">I agree to the terms and conditions that governs the use of this device listed herein this End User License Agreement.</string>
    <string name="all_set">You are all set to start using your new <b>EduTAB B-LINK HD8</b> Tablet.</string>
    <string name="use_details1">• Launch AVG Pro to perform update and activate anti-theft mode.</string>
    <string name="use_details2">• Your default pin for EduTAB Launcher is 2019 - please change</string>
    <string name="use_details3">• Visit EduTAB website for tutorials and how to guides.</string>
    <string name="use_details4">• Follow blinkedutab on social media for update &amp; promotions.</string>
    <string name="menu_search">Search application</string>
    <string name="menu_network">Open network settings</string>
    <string name="menu_refresh">Refresh applications</string>
    <string name="menu_whitelist_wifi">Default block Wi-Fi</string>
    <string name="menu_whitelist_other">Default block mobile</string>
    <string name="menu_reset_wifi">Reset Wi-Fi rules</string>
    <string name="menu_reset_other">Reset mobile rules</string>
    <string name="menu_dark">Use dark theme</string>
    <string name="menu_vpn_settings">Open VPN settings</string>
    <string name="menu_support">Support</string>
    <string name="menu_about">About</string>
    <string name="vpn_msg">VPN connection will be set up that allows EduTAB to monitor network traffic. It will ensure security and privacy of your device.</string>

    <string name="msg_sure">Are you sure?</string>

    <string-array name="PackageNames">
        <item>"com.kevinbradford.games.puzzles"</item>
        <item>"com.teachersparadise.fingertracing001"</item>
        <item>"com.kevinbradford.games.seventhgrade"</item>
        <item>"fr.lehovetzki.ABMath"</item>
        <item>"com.teachersparadise.fingertracing002"</item>
        <item>"com.nadstech.aesopsfables.AOTUAFGDTHFBBJHMIW"</item>
        <item>"jp.komakuro.book11339"</item>
        <item>"com.android.aldiko"</item>
        <item>"com.intellijoy.pack.tracing"</item>
        <item>"com.movinapp.facts.universe"</item>
        <item>"com.google.android.marvin.talkback"</item>
        <item>"com.movinapp.facts.animal"</item>
        <item>"com.google.android.marvin.talkback"</item>
        <item>"com.movinapp.facts.animal"</item>
        <item>"com.shinycube.android.fun4kids.animalsmemorygame"</item>
        <item>"com.avg.cleaner"</item>
        <item>"com.kevinbradford.games.byanimalsvpp"</item>
        <item>"com.kevinbradford.games.bypuzzles"</item>
        <item>"com.appwings.basicgeometry"</item>
        <item>"ccom.beeclever.alphabet.en"</item>
        <item>"com.sirma.mobile.bible.android"</item>
        <item>"com.kevinbradford.games.bingo"</item>
        <item>"com.effectiveobjects.bspelling"</item>
        <item>"com.kevinbradford.games.cartruckpuzzles"</item>
        <item>"cc.chess.full"</item>
        <item>"org.scoutant.cc"</item>
        <item>"com.lulo.scrabble.classicwordsplus"</item>
        <item>"com.intellijoy.tapandcolor"</item>
        <item>"com.kevinbradford.games.coloring"</item>
        <item>"com.socratica.mobile.countries"</item>
        <item>"com.teachersparadise.daysmonths"</item>
        <item>"com.digitalbusiness.DigitalPanFree"</item>
        <item>"com.kiddoware.kidsplace"</item>
        <item>"com.upskew.encode"</item>
        <item>"livio.pack.lang.en_US"</item>
        <item>"com.app.grammarenglishpremium"</item>
        <item>"com.zayaninfotech.english.grammaradfree"</item>
        <item>"com.springz.easyenglish_adfree"</item>
        <item>"com.qkstudio.english.grammar.test"</item>
        <item>"com.springz.letter_writing_adfree"</item>
        <item>"com.examenglish.englishtenses"</item>
        <item>"com.nimbleminds.everydaywords2full"</item>
        <item>"com.kevinbradford.games.fairytalepuzzles"</item>
        <item>"com.kevinbradford.games.fifthgrade"</item>
        <item>"com.kevinbradford.games.firstgrade"</item>
        <item>"com.nimbleminds.everydaywordsfull"</item>
        <item>"com.kevinbradford.games.fourthgrade"</item>
        <item>"com.appletreebook.foxandgrapes"</item>
        <item>"com.SimplyLearningAid.SimplyFBingoFull"</item>
        <item>"com.french.zeemish"</item>
        <item>"com.webrich.gepos"</item>
        <item>"me.fasttest.grammar"</item>
        <item>"my.handrite.prem"</item>
        <item>"com.itellyouastory.android.adfree"</item>
        <item>"com.globile.ipractise"</item>
        <item>"com.appletreebook.jackandbeanstalk"</item>
        <item>"cbs.jsm.android.app.Pro"</item>
        <item>"cbs.jsm.android.app"</item>
        <item>"home.widgetlabs"</item>
        <item>"com.anahoret.android.letters"</item>
        <item>"com.intellijoy.android.phonics"</item>
        <item>"com.intellijoy.abc.trains"</item>
        <item>"com.nightboost.kids.animals"</item>
        <item>"com.shinycube.android.fun4kids.kidsopposite"</item>
        <item>"com.anahoret.android.colors"</item>
        <item>"com.anahoret.android.dots"</item>
        <item>"com.intellijoy.drawwithshapes"</item>
        <item>"com.intellijoy.kids.math"</item>
        <item>"com.intellijoy.shapes2"</item>
        <item>"com.intellijoy.counting"</item>
        <item>"com.intellijoy.android.reading"</item>
        <item>"com.intellijoy.sorting"</item>
        <item>"com.infinut.firstgrade.measure"</item>
        <item>"com.anahoret.android.numbers"</item>
        <item>"com.kiddoware.kidspictureviewer"</item>
        <item>"com.anahoret.android.shapes"</item>
        <item>"com.divmob.kidpuzzleworldadfree"</item>
        <item>"com.kiddoware.scheduler"</item>
        <item>"com.intellijoy.sightwords"</item>
        <item>"com.intellijoy.tellingtime"</item>
        <item>"com.kiddoware.kidsvideoplayer"</item>
        <item>"com.intellijoy.tellingtime"</item>
        <item>"com.kiddoware.kidsvideoplayer"</item>
        <item>"com.kevinbradford.games.wbk"</item>
        <item>"com.infinut.kindergarten.math"</item>
        <item>"com.infinut.kindergarten.wordplay"</item>
        <item>"com.infinut.kindergarten.wordplay"</item>
        <item>"com.alkalinelabs.learnguitarchords.kidsplace"</item>
        <item>"com.ufo.learnfrance"</item>
        <item>"com.rooh.learn_spanish"</item>
        <item>"com.ufo.learnspanish"</item>
        <item>"com.newlifegroup.learnspanish"</item>
        <item>"com.appletreebook.littleredridinghood"</item>
        <item>"com.arent.magiccolor"</item>
        <item>"com.chilisapps.android.mathAttackPro"</item>
        <item>"com.funmathtricks"</item>
        <item>"net.mathsworkout"</item>
        <item>"com.berniiiiiiii.logomatchup"</item>
        <item>"com.gaga.memory"</item>
        <item>"com.merriamwebster.premium"</item>
        <item>"com.divmob.multiplicationgenius.game"</item>
        <item>"com.biblestory.android.story"</item>
        <item>"com.gokids.notes"</item>
        <item>"com.teachersparadise.numeros"</item>
        <item>"air.nurseryrhymewithactivities1"</item>
        <item>"air.NurseryRhyme2"</item>
        <item>"air.NurseryRhyme3"</item>
        <item>"air.nurseryrhyme4withactivity"</item>
        <item>"air.NurseryRhyme5"</item>
        <item>"com.kevinbradford.games.owlpreschool"</item>
        <item>"com.pearson.grammar.intermediate"</item>
        <item>"air.com.literacysoft.PhonicsAndReadingWithMcGuffey"</item>
        <item>"com.kevinbradford.games.pklg2"</item>
        <item>"com.kevinbradford.games.preschoolgames"</item>
        <item>"com.kevinbradford.games.preschoolfun"</item>
        <item>"com.requestanapp.readingcomprehensionpaid"</item>
        <item>"com.kevinbradford.games.redwrecker"</item>
        <item>"com.nimbleminds.rhymingwordsfull"</item>
        <item>"com.kevinbradford.games.secondgrade"</item>
        <item>"de.underflow.calc"</item>
        <item>"com.appworms.shakespeare"</item>
        <item>"com.SimplyLearningAid.SimplyFracFull"</item>
        <item>"com.SimplyLearningAid.SimplyFrac2Full"</item>
        <item>"com.SimplyLearningAid.SimplyFrac3Full"</item>
        <item>"com.SimplyLearningAid.SimplyGeoFull"</item>
        <item>"com.SimplyLearningAid.SimplyNumFull"</item>
        <item>"com.kevinbradford.games.sixthgrade"</item>
        <item>"com.appletreebook.snowqueen"</item>
        <item>"livio.pack.lang.es_ES"</item>
        <item>"com.zeemish.spanish"</item>
        <item>"air.com.mingoville.speaktionary"</item>
        <item>"air.se.gobias.spell"</item>
        <item>"com.igoldtech.an.swiped"</item>
        <item>"com.alifinnovative.SynonymsAntonymsDictionary"</item>
        <item>"com.appletreebook.theadventuresofpinocchio"</item>
        <item>"com.appletreebook.thefishermanandthegoldenfish"</item>
        <item>"com.appletreebook.thefrogprince"</item>
        <item>"com.appletreebook.thelionandthebull"</item>
        <item>"com.appletreebook.saltmerchantandhisdonkey"</item>
        <item>"com.appletreebook.tortoiseandtheeagle"</item>
        <item>"com.appletreebook.wolfinsheepclothing"</item>
        <item>"com.appletreebook.thegoose"</item>
        <item>"com.appletreebook.thewildswans"</item>
        <item>"com.kevinbradford.games.thirdgrade"</item>
        <item>"com.lefto4.timestables"</item>
        <item>"com.gamestar.pianoperfect"</item>
        <item>"com.appletreebook.sevenlittlegoats"</item>
        <item>"fr.lehovetzki.worddomino"</item>
        <item>"com.wordwebsoftware.android.wordweb"</item>
        <item>"com.kevinbradford.games.zoopuzzles"</item>
        <item>"com.google.android.gm"</item>
        <item>"com.facebook.katana"</item>
    </string-array>
</resources>